# Telegram

./: .gitignore  Dockerfile  README.md  pylint.toml  pyproject.toml
app/: __init__.py  main.py  test_api.py
app/api/route/: ChallengeRoute.py  EventRoute.py  ScoreRoute.py  TeamRoute.py  UserRoute.py  __init__.py
app/api/service/: ChallengeService.py  EventService.py  ScoreService.py  TeamService.py  UserService.py  __init__.py
app/backend/api/: ChallengeApi.py  UserApi.py  __init__.py
app/backend/dto/: base.py  challenge.py  team.py  user.py
app/backend/route/: UserRoute.py
app/config/: ApiRoute.py  BotConfig.py  DatabaseConfig.py  RedisConfig.py  RouteConfig.py  __init__.py
app/controller/filter/: auth.py
app/controller/handler/: AdminHandler.py  ChallengeHandler.py  EventHandler.py  ScoreHandler.py  SupportHandler.py  TeamHandler.py  UserHandler.py  __init__.py
app/controller/router/: __init__.py  auth.py  error.py  router.py
app/database/: BaseModel.py  User.py  __init__.py
app/database/entity/: BaseModel.py  User.py  __init__.py
app/database/repository/: UserRepository.py
app/dialog/: AuthDialog.py  ChallengeDialog.py  MenuDialog.py  __init__.py
app/filter/: auth.py
app/handler/: __init__.py  auth.py  menu.py
app/handler/dialog/: register.py
app/handler/filter/: __init__.py
app/handler/router/: auth.py  (+2 more)
app/service/: ChallengeService.py  UserService.py  __init__.py
app/templates/: TemplateLoader.py
app/utils/: AnyCommand.py  DeleteMessageInput.py  __init__.py  back.py
app/widgets/: back.py
deploy/: docker-compose.yml  dump.sh
deploy/config/: .env.sample
(+132 files in other folders)
